# cppm-homeworks

./: .gitignore  README.md
Module_03/Task_01/: Task_01.cpp
Module_04/Task_01/: Task_01.cpp
Module_04/Task_02/: Task_02.cpp
Module_06/Task_03/: Task_03.cpp  Task_03.vcxproj
Module_08/Task_02/: 01.0_triangle.cpp  01.1_rt.cpp  01.2_io.cpp  01.3_et.cpp  02.0_quadri.cpp  02.1.0_paral.cpp  02.1.1_rhomb.cpp  02.1.2.0_rect.cpp  02.1.2.1_squire.cpp  0_Figure.cpp  _main.cpp
Module_10/Task_02/src/: CMakeLists.txt
Module_10/Task_02/src/libs/: CMakeLists.txt
