cmake_minimum_required(VERSION 3.18.0)
project(HIERARCHY VERSION 0.2)
include_directories(libs)
set(CMAKE_SUPPRESS_REGENERATION true)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY K:/Module_10/Task_02/bin)
set(SOURCE_EXE Task.cpp)
add_executable(HIERARCHY ${SOURCE_EXE})
target_link_libraries(HIERARCHY LIBEARCHY)
